// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders properly 1`] = `
<ModuleContext>
  <Component
    context={
      Object {
        "Consumer": [Function],
        "Provider": [Function],
      }
    }
  >
    <Provider
      value="1"
    >
      <SubscribeWrap>
        <Consumer
          quiet={false}
        >
          <Component
            count="1"
          >
            1
          </Component>
        </Consumer>
      </SubscribeWrap>
      <Subscribe
        select="count"
        to={[Function]}
      >
        <SubscribeWrap>
          <Consumer
            quiet={false}
          >
            <Component
              count="1"
            >
              1
            </Component>
          </Consumer>
        </SubscribeWrap>
      </Subscribe>
    </Provider>
  </Component>
</ModuleContext>
`;

exports[`unnamed context 1`] = `
<ModuleContext>
  <Component
    context={
      Object {
        "Consumer": [Function],
        "Provider": [Function],
      }
    }
  >
    <Provider
      value="1"
    >
      <SubscribeWrap>
        <Consumer
          quiet={false}
        >
          <Component
            context="1"
          >
            1
          </Component>
        </Consumer>
      </SubscribeWrap>
      <Subscribe
        select={[Function]}
        to={[Function]}
      >
        <SubscribeWrap>
          <Consumer
            quiet={false}
          >
            <Component
              context="1"
            >
              1
            </Component>
          </Consumer>
        </SubscribeWrap>
      </Subscribe>
    </Provider>
  </Component>
</ModuleContext>
`;
